--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@ html, body {
 }
 
 #wrap {
-
+min-height:100%;
 }
 #main {
   overflow:auto;
@@ -29,8 +29,8 @@ html, body {
 
 .footer {
   position: relative;
-  margin-top: -100px; /* negative value of footer height */
-  height: 100px;
+  margin-top: -150px; /* negative value of footer height */
+  height: 150px;
   clear:both;
   padding-top:20px;
   background-color:#5e5e5e;
@@ -106,8 +106,16 @@ html, body {
         </li>
       </ul>
 
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+      <ul class="nav navbar-nav navbar-right"  style="vertical-align=center">
+       <%if current_user.present?%>
+ <li><a href="/users/edit">Welcome, <%=current_user.email%></a></li>
+<%end%>
+      <%if current_user.present?%>
+      <li><a href="/users/sign_out" data-method="delete">Sign-Out</a></li>
+      <%else%>
+        <li><a href="/users/sign_in">Sign-In</a></li>
+        <li><a href="/users/sign_up">Sign-Up</a></li>
+        <%end%>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -122,7 +130,20 @@ html, body {
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+<%if alert.present?%>
+<div class="alert alert-danger alert-dismissible" role="alert">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <strong><%=alert%>
+</div>
+<%end%>
 
+
+<%if notice.present?%>
+<div class="alert alert-success alert-dismissible" role="alert">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <strong><%=notice%>
+</div>
+<%end%>
 
 
 
