--- a/app/views/essentials/test.html.erb
+++ b/app/views/essentials/test.html.erb
@@ -427,9 +427,9 @@ color:red;
 
                               <div class="media">
                               <div class="media-left media-middle col-xs-12">
- <span class="price col-xs-12">$<%= zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"]["ChargeableRateInfo"]["@averageRate"]%><span class="pricesmall col-xs-12">  rate per night</span></span>
+ <span class="price col-xs-12">$<%= zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"]["ChargeableRateInfo"]["@averageRate"]%><span class="pricesmall">  rate per night</span></span>
 
-                                    <div class="media-left col-xs-12"><img class="media-object" src="http://media.expedia.com<%= zebra["thumbNailUrl"].sub("_t","_d")%>">  </div>
+                                    <div class="media-left"><img class="media-object" src="http://media.expedia.com<%= zebra["thumbNailUrl"].sub("_t","_d")%>">  </div>
 
 
 
