--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -89,9 +89,9 @@ min-height:60%;
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-   <!--    <ul class="nav navbar-nav">
+   <ul class="nav navbar-nav">
         <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-       <li><a href="#">Link</a></li>
+       <li><a href="https://travelnow.com/selfService/searchform?cid=489058&lang=en">My Reservations</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -105,7 +105,7 @@ min-height:60%;
           </ul>
         </li>
       </ul>
--->
+
       <ul class="nav navbar-nav navbar-right"  style="vertical-align=center">
        <%if current_user.present?%>
  <li><a href="/users/edit">Welcome, <%=current_user.email%></a></li>
@@ -165,6 +165,7 @@ min-height:60%;
 <footer class="footer" style="color:white">
   <p><a href="/contactus.html"> Contact Us</a></p>
   <p><a href="/aboutus.html"> About Us</a></p>
+  <p><a href="http://travel.ian.com/index.jsp?pageName=userAgreement&locale=en_US&cid=489058">Terms and Conditions</a></p>
 
 
 </footer>
