--- a/app/views/essentials/test.html.erb
+++ b/app/views/essentials/test.html.erb
@@ -127,8 +127,6 @@ text-decoration: none;}
 
 
 
-
-
 <div class="container-fluid">
 
 
@@ -311,10 +309,13 @@ text-decoration: none;}
 
          <div class="col-md-12 col-xs-12 col-sm-3 short_div" style="padding-top:40px;padding-bottom:40px;text-align:center;">
 
-
-
-                <input type="submit" "text="Search" class="btn btn-info btn-lg"></a>
+                <input type="submit" "text="Search" value="Search" class="btn btn-info btn-lg" onclick="waitingDialog.show('Searching for Hotels...');setTimeout(function () {waitingDialog.hide();}, 2000);"></a>
         </div>
+
+
+
+
+
 
 
   </div>
@@ -334,11 +335,9 @@ text-decoration: none;}
 
 
 
-
-
-
-
     </form>
+
+
 
 
 <%else%>   <!--else for 2nd page!`-->
@@ -413,8 +412,11 @@ text-decoration: none;}
 
 <form id="accordion<%=counter%>" action="/essentials/hoteldetails" method="post" >
 
+ <input type="submit" "text="Search" value="Search" class="btn btn-info btn-lg" onclick="waitingDialog.show('Searching for Hotels...');setTimeout(function () {waitingDialog.hide();}, 2000);"></a>
 
-<a href="javascript:{}" onclick="document.getElementById('accordion<%=counter%>').submit(); return false;" style="color:black">
+
+
+<a href="javascript:{}" onclick="document.getElementById('accordion<%=counter%>').submit();waitingDialog.show('Searching for Rooms...');setTimeout(function () {waitingDialog.hide();}, 2000); return false;" style="color:black">
 
 
 <div class="panel-group col-md-8 col-md-offset-2 column" id="accordion" role="tablist" aria-multiselectable="true" >
@@ -521,7 +523,7 @@ Date: <%=weather["dateconverted"]%>
 </div>
 
 </a>
-
+</a>
 
 <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
@@ -616,8 +618,6 @@ for (i = 0; i < locations.length; i++) {
     })(marker, i));
 }
 
-
-
     </script>
 
 
@@ -666,6 +666,59 @@ $("#ex2").on("slide", function(slideEvt) {
      $( "#checkout" ).datepicker();
    });
 
+
+var waitingDialog = (function ($) {
+
+    // Creating modal dialog's DOM
+  var $dialog = $(
+    '<div class="modal fade" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-hidden="true" style="padding-top:15%; overflow-y:visible;">' +
+    '<div class="modal-dialog modal-m">' +
+    '<div class="modal-content">' +
+      '<div class="modal-header"><h3 style="margin:0;"></h3></div>' +
+      '<div class="modal-body">' +
+        '<div class="progress progress-striped active" style="margin-bottom:0;"><div class="progress-bar" style="width: 100%"></div></div>' +
+      '</div>' +
+    '</div></div></div>');
+
+  return {
+    /**
+     * Opens our dialog
+     * @param message Custom message
+     * @param options Custom options:
+     *          options.dialogSize - bootstrap postfix for dialog size, e.g. "sm", "m";
+     *          options.progressType - bootstrap postfix for progress bar type, e.g. "success", "warning".
+     */
+    show: function (message, options) {
+      // Assigning defaults
+      var settings = $.extend({
+        dialogSize: 'm',
+        progressType: ''
+      }, options);
+      if (typeof message === 'undefined') {
+        message = 'Loading';
+      }
+      if (typeof options === 'undefined') {
+        options = {};
+      }
+      // Configuring dialog
+      $dialog.find('.modal-dialog').attr('class', 'modal-dialog').addClass('modal-' + settings.dialogSize);
+      $dialog.find('.progress-bar').attr('class', 'progress-bar');
+      if (settings.progressType) {
+        $dialog.find('.progress-bar').addClass('progress-bar-' + settings.progressType);
+      }
+      $dialog.find('h3').text(message);
+      // Opening dialog
+      $dialog.modal();
+    },
+    /**
+     * Closes dialog
+     */
+    hide: function () {
+      $dialog.modal('hide');
+    }
+  }
+
+})(jQuery);
 
 
 
