--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -162,11 +162,15 @@ min-height:60%;
     <p></p>
   </div>
 </div>
-<footer class="footer" style="color:white">
-  <p><a href="/contactus.html"> Contact Us</a></p>
-  <p><a href="/aboutus.html"> About Us</a></p>
-  <p><a href="http://travel.ian.com/index.jsp?pageName=userAgreement&locale=en_US&cid=489058">Terms and Conditions</a></p>
+<footer class="footer" style="color: white">
+  <span><a href="/contactus.html"> Contact Us</a></span>
+   <span><a href="/aboutus.html"> About Us</a></span>
+   <span><a href="http://travel.ian.com/index.jsp?pageName=userAgreement&locale=en_US&cid=489058">Terms and Conditions</a></span>
 
+  <span><dd> US and Canada: 1-800-780-5733 Europe: 00-800-11-20-11-40 Promo Code 489058</dd></span>
+
+
+  <span><dd> © 2015 HotelWherever™ All rights reserved.</dd></span>
 
 </footer>
 
