--- a/app/views/essentials/test.html.erb
+++ b/app/views/essentials/test.html.erb
@@ -110,6 +110,17 @@ text-decoration: none;}
 
 
 
+<head>
+
+<title>Hotel Wherever</title>
+
+
+
+
+        </head>
+
+
+
 
 <div class="container-fluid">
 
