--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,5 +47,5 @@
 .footer {color: white;}
 
 .footer {text-align:center}
-.footer span {padding-left:75px;}
+.footer span {padding-left:75px;text-align:center;}
 .footer span dd {text-align:center;}
