--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,42 +14,31 @@ $.widget.bridge('hasDatepicker', $.ui.datepicker2);
 </script>
   <%= csrf_meta_tags %>
 
+
+
+
 <style>
-html, body {
-  height: 100%;
-}
 
+
+html {
+  position: relative;
+  min-height: 100%;
+}
 body {
-  display: table;
-  width: 100%;
+  /* Margin bottom by footer height */
+  margin-bottom: 200px;
 }
-
-.page-row {
-  display: table-row;
-  height: 1px;
-}
-
-.page-row-expanded { height: 100%; }
-
-
-
-#wrapper {
-min-height:100%;
-height:auto;
- margin: 0 auto -100px;
-    padding-bottom: 100px;
-}
-
-
-
 .footer {
   position: relative;
-  margin-top: -150px; /* negative value of footer height */
-  height: 150px;
-  clear:both;
-  padding-top:20px;
-  background-color:#5e5e5e;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 180px;
+ background-color:#5e5e5e;
 }
+
+
+
 
 .navbar-nav > li > a {
     padding-top: 0px;
@@ -163,21 +152,21 @@ height:auto;
 </div>
 <%end%>
 
-<body>
 
 
-<div class="page-row page-row-expanded">
 
 <%= yield %>
 
-</div>
 
 
 </body>
 
-<footer class="footer page-row"" style="color: white">
+
+    <footer class="footer">
+      <div class="container">
+
   <span><dd><a href="/contactus.html"> Contact Us</a></span>
-   <span><a href="/aboutus.html"> About Us</a></span>
+   <span ><a href="/aboutus.html"> About Us</a></span>
    <span><a href="http://travel.ian.com/index.jsp?pageName=userAgreement&locale=en_US&cid=489058">Terms and Conditions</a></dd></span>
 
   <span><dd> US and Canada: 1-800-780-5733 Europe: 00-800-11-20-11-40 Promo Code 489058</dd></span>
@@ -185,7 +174,10 @@ height:auto;
 
   <span><dd> © 2015 HotelWherever™ All rights reserved.</dd></span>
 
+
+  </div>
 </footer>
+
 
 
 </html>
