--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,6 +47,6 @@
 .footer {color: white;}
 
 .footer {text-align:center}
-.footer span {padding-left:75px;text-align:center;
-.footer span break {width:100%;}
+.footer span {padding-left:75px;text-align:center;}
+
 
