--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,10 +29,10 @@ height: 100%;
 min-height: 100%;
 height: auto !important;
 height: 100%;
-margin: 0 auto -4em;
+margin: 0 auto -6em;
 }
 .footer, .push {
-height: 4em;
+height: 6em;
 background-color:#5e5e5e;
 
 }
@@ -76,10 +76,6 @@ background-color:#5e5e5e;
 
 </head>
 
-
-<body>
-
-   <div class="wrapper">
 
 
 
@@ -165,7 +161,13 @@ background-color:#5e5e5e;
 <%end%>
 
 
+
+   <div class="wrapper">
+
+
 <%= yield %>
+
+</div>
 
    <div class="push"></div>
 </div>
@@ -175,7 +177,7 @@ background-color:#5e5e5e;
   <span><a href="/contactus.html"> Contact Us</a></span>
 <span><a href="/aboutus.html"> About Us</a></span>
    <span><a href="http://travel.ian.com/index.jsp?pageName=userAgreement&locale=en_US&cid=489058">Terms and Conditions</a></span>
-<span class="break"></span>
+
    <span>US and Canada: 1-800-780-5733 Europe: 00-800-11-20-11-40 Promo Code 489058</span>
 <br>
 <span> © 2015 HotelWherever™ All rights reserved.</span>
