--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,12 +33,12 @@ height: 100%;
 }
 .footer, .push {
 height: 6em;
-background-color:#5e5e5e;
+
 
 }
 
 
-
+.footer {background-color:#5e5e5e;}
 
 
 .navbar-nav > li > a {
