--- a/app/views/essentials/test.html.erb
+++ b/app/views/essentials/test.html.erb
@@ -400,7 +400,7 @@ text-decoration: none;}
 
 
 
-<a href="javascript:{}" onclick="document.getElementById('accordion<%=counter%>').submit();waitingDialog.show('Searching for Rooms...');setTimeout(function () {waitingDialog.hide();}, 30000);"ga('send', 'event', 'Rooms', 'Click', 'Booking'); return false;" style="color:black">
+<a href="javascript:{}" onclick="document.getElementById('accordion<%=counter%>').submit();waitingDialog.show('Searching for Rooms...');setTimeout(function () {waitingDialog.hide();}, 30000);ga('send', 'event', 'Rooms', 'Click', 'Booking'); return false;" style="color:black">
 
 
 <div class="panel-group col-md-8 col-md-offset-2 column" id="accordion" role="tablist" aria-multiselectable="true" >
