--- a/app/views/essentials/test.html.erb
+++ b/app/views/essentials/test.html.erb
@@ -474,7 +474,7 @@ text-decoration: none;}
         </a>
 
     </div>
-    <div id="collapse<%=counter%>" class="panel-collapse collapse" onClick="ga('send', 'event', 'Booking', 'Click', 'Booking');" role="tabpanel" aria-labelledby="heading<%=counter%>">
+    <div id="collapse<%=counter%>" class="panel-collapse collapse" onClick="ga('send', 'event', 'Weather', 'Click', 'Weather');" role="tabpanel" aria-labelledby="heading<%=counter%>">
       <div class="panel-body">
 
 
