--- a/app/views/essentials/contactus.html.erb
+++ b/app/views/essentials/contactus.html.erb
@@ -2,12 +2,12 @@
 <fieldset>
 
 <!-- Form Name -->
-<legend>Contact Us</legend>
+<h1>Contact Us</h1>
 
 <!-- Text input-->
 <div class="form-group">
   <label class="col-md-4 control-label" for="name">Name</label>
-  <div class="col-md-5">
+  <div class="col-md-4">
   <input id="name" name="name" type="text" placeholder="Enter your full name here" class="form-control input-md" required="">
 
   </div>
@@ -16,7 +16,7 @@
 <!-- Text input-->
 <div class="form-group">
   <label class="col-md-4 control-label" for="email">Email</label>
-  <div class="col-md-5">
+  <div class="col-md-4">
   <input id="email" name="email" type="text" placeholder="Enter your email address here" class="form-control input-md" required="">
 
   </div>
