--- a/app/views/essentials/contactus.html.erb
+++ b/app/views/essentials/contactus.html.erb
@@ -2,8 +2,9 @@
 <fieldset>
 
 <!-- Form Name -->
-<h1>Contact Us</h1>
-
+<div class="col-md-12" style="text-align:center">
+<h2>Contact Us</h2>
+<div>
 <!-- Text input-->
 <div class="form-group">
   <label class="col-md-4 control-label" for="name">Name</label>
