--- a/app/views/essentials/test.html.erb
+++ b/app/views/essentials/test.html.erb
@@ -413,7 +413,7 @@ text-decoration: none;}
 
                               <div class="media">
                               <div class="media-left media-middle col-xs-12">
- <span class="price col-xs-12">$<%= zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"]["ChargeableRateInfo"]["@averageRate"].round(0)%><span class="pricesmall">  rate per night</span></span>
+ <span class="price col-xs-12">$<%= zebra["RoomRateDetailsList"]["RoomRateDetails"]["RateInfos"]["RateInfo"]["ChargeableRateInfo"]["@averageRate"].to_i.round(0)%><span class="pricesmall">  rate per night</span></span>
 
                                     <div class="media-left"><img class="media-object" src="http://media.expedia.com<%= zebra["thumbNailUrl"].sub("_t","_d")%>">  </div>
 
